k8s-manifests/mysql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tc-mysql
  namespace: oficina-mecanica
spec:
  selector:
    matchLabels:
      app: tc-mysql
  template:
    metadata:
      labels:
        app: tc-mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: tc-mysql-service
  namespace: oficina-mecanica
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: tc-mysql
