k8s-manifests/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tc-app-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tc-app-service
                port:
                  number: 80
